# automated-training-pipeline

./: Dockerfile  README.md  pyproject.toml
src/data/: Dockerfile  fetch_iris_data.py
src/data/src/data/: fetch_iris_data.py
src/model/: lambda_handler_preprocess.py  output.txt  preprocess.py  preprocessing.py
src/preprocess/: Dockerfile  output.txt  preprocess.py
src/train/: lambda_handler_train.py  output.txt
