[tool.poetry]
name = "automated-training-pipeline"
version = "0.1.0"
description = ""
authors = ["Zak Raicik <raicik.zach@Gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "automated_training_pipeline"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.69"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
